Thu Jul 31 13:18:30 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* include/ruby/ruby.h (struct RString): size of ary must be
	  RSTRING_EMBED_LEN_MAX + 1.

Thu Jul 31 12:23:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_unpack): upper half of hexdigits has never been used.

Thu Jul 31 11:31:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/syck.h (ASSERT): fix typo at r18176.

	* ext/syck/rubyext.c (rb_syck_compile): expression in ASSERT() has no
	  effect unless debug mode.

Thu Jul 31 10:51:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (ruby_iseq_disasm_insn): suppress warnings on platforms which
	  int size differs from pointer size.

	* ext/openssl/ossl_asn1.c (ossl_asn1_get_asn1type): ditto

	* ext/syck/rubyext.c (rb_syck_err_handler),
	  (syck_default_error_handler): ditto.

Thu Jul 31 02:21:39 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/syck/rubyext.c (rb_syck_compile): remove meaningless branch
	  that misleads into thinking that the variable sav may be
	  uninitialized.

Thu Jul 31 01:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_unlock_all): mutex is no longer a ruby object.

Thu Jul 31 01:18:07 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (magic_comment_encoding): remove meaningless null check.

Thu Jul 31 01:09:28 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (VpIsRoundMode): fix tautology
	  condition.

Thu Jul 31 00:58:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_unpack): reduced static variables.

Thu Jul 31 00:10:20 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (rb_proc_call_with_block): prevent null reference.

Wed Jul 30 22:19:13 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (vtable_free): remove meaningless null check.

Wed Jul 30 22:08:25 2008  Tanaka Akira  <akr@fsij.org>

	* dir.c (struct dir_data): change path field char * to VALUE.
	  (mark_dir): new function for mark path field.
	  (free_dir): follow the path field change.