@@ -1,3 +1,10 @@
+Thu Jul 31 15:11:11 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* test/ruby/test_transcode.rb: added test_shift_jis
+          (contributed by Yoshihiro Kambayashi) and
+          test_public_review_issue_121
+          (see http://www.unicode.org/review/pr-121.html)
+
 Thu Jul 31 13:18:30 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* include/ruby/ruby.h (struct RString): size of ary must be
